--- a/app/src/main/res/layout/mylayout.xml
+++ b/app/src/main/res/layout/mylayout.xml
@@ -4,17 +4,29 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <TextView
-        android:layout_width="184dp"
-        android:layout_height="51dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Conectado ao servidor"
-        android:id="@+id/textView"
-        android:background="@color/accent_material_light"
-        android:layout_weight="0.03"
-        android:layout_gravity="center_horizontal"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textColor="#f61212"
-        android:textAlignment="@integer/design_snackbar_text_max_lines" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ligar"
+        android:id="@+id/conectar"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="168dp"
+        android:onClick="ligarLampada"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Desligar"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/conectar"
+        android:layout_alignEnd="@+id/conectar"
+        android:layout_marginBottom="77dp"
+        android:onClick="desligarLampada"
+        />
+
+
 </RelativeLayout>
